<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cslAbout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/holo_blue"
    android:backgroundTint="@color/holo_blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/opensan_bold"
            android:text="@string/about_title"
            android:textColor="@color/white"
            android:textSize="@dimen/font_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />

        <EditText
            android:id="@+id/edtDefaultCity"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50"
            android:layout_margin="@dimen/margin_20"
            android:autofillHints="@string/description"
            android:background="@drawable/radius_25_bg"
            android:fontFamily="@font/opensan_italic"
            android:hint="@string/default_city"
            android:inputType="text"
            android:paddingStart="@dimen/margin_20"
            android:paddingEnd="@dimen/margin_20"
            android:textColor="@color/blue_ocean"
            android:textSize="@dimen/font_20"
            app:layout_constraintBottom_toTopOf="@+id/btnSet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="SpUsage" />

        <Button
            android:id="@+id/btnSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_20"
            android:background="@drawable/radius_25_bg"
            android:backgroundTint="@color/blue_ocean"
            android:text="@string/set"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>