<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dimen_60"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_10"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvTimeDetailItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_2"
        android:fontFamily="@font/opensan_semibold"
        android:text="@string/time_demo"
        android:textColor="@color/holo_blue"
        android:textSize="@dimen/font_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <ImageView
        android:id="@+id/imgWeatherIconDetailItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:contentDescription="@string/content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimeDetailItem" />

    <TextView
        android:id="@+id/tvTempDetailItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/opensan_bold"
        android:text="@string/temp_demo"
        android:textColor="@color/holo_blue"
        android:textSize="@dimen/font_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgWeatherIconDetailItem"
        tools:ignore="SpUsage" />


</androidx.constraintlayout.widget.ConstraintLayout>