<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cslTodayWeather"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvToday"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/font_20"
        android:backgroundTint="@color/holo_blue"
        app:cardCornerRadius="@dimen/dimen_40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgWeatherIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_350"
                android:contentDescription="@string/content_description"
                android:scaleX="4"
                android:scaleY="4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pad_8"
                android:text="@string/temp_demo"
                android:textColor="@color/white"
                android:textSize="@dimen/font_120"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/tvHumidityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_96"
                android:layout_marginTop="@dimen/margin_28"
                android:text="@string/humidity"
                android:textColor="@color/white"
                android:textSize="@dimen/font_19"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/tvWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_96"
                android:layout_marginTop="@dimen/margin_4"
                android:fontFamily="@font/opensan_bold"
                android:text="@string/wind"
                android:textColor="@color/white"
                android:textSize="@dimen/font_19"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHumidityTitle"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensan_regular"
                android:text="@string/description"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/font_23"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTemp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>